syntax = "proto3";
package server;

option go_package = "github.com/ethanmil/bolo/server";

message World {
	int32 id = 1;
	int32 playerCount = 2;
}

message WorldMap {
	message Tile {
		int32 x = 1;
		int32 y = 2;
		string type = 3;
	}
	repeated Tile tiles = 1;
}

message WorldModification {
	int32 x = 1;
	int32 y = 2;
	int32 type = 3;
	int32 health = 4;
}

message Player {
	int32 id = 1;
	int32 tankID = 2;
	string name = 3;
}

message Tank {
	int32 id = 1;
	float x = 2;
	float y = 3;
}

message Message {
	int32 id = 1;
	string writer = 2;
	string body = 3;
}

service BoloServer {
	rpc GetPlayersOnline(World) returns (stream Player) {}

	rpc GetWorldMap(World) returns (WorldMap) {}

	rpc GetWorldModifications(World) returns (stream WorldModification) {}

	rpc GetTanks(World) returns (stream Tank) {}

	rpc SendTankData(stream Tank) returns (Tank) {}

	rpc Chat(stream Message) returns (stream Message) {}
}

